# Novireon

./: .gitignore  bot.py  config.py  logging_config.py  mongo_crud.py  pip_list.txt  pyproject.toml
Util/: __init__.py  db_helper.py
Utils/: db_helper.py
cogs/Moderation/: __inti__.py  general.py
cogs/Music/: __init__.py  monster_siren.py  youtube.py
cogs/Music/core/: music_checkers.py  music_data.py  music_functions.py  music_main.py  music_setup.py  music_utils.py
cogs/Music/core/view/: control_views.py  music_view.py
cogs/TempVC/: __init__.py  setup.py  temp_vc_commands.py
cogs/Utility/: __init__.py  miq.py  ping.py
core/Watcher/: voice_channel_status.py
