[project]
name = "Novireon"
version = "0.2.2"
requires-python = ">=3.13"
dependencies = [
    "discord-py>=2.6.3",
    "google-api-python-client>=2.179.0",
    "motor>=3.7.1",
    "pillow>=11.3.0",
    "psutil>=7.0.0",
    "pydub>=0.25.1",
    "pymongo>=4.14.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "yt-dlp>=2025.8.22",
]
